# wgsl-bindgen

./: .clippy.toml  .gitignore  .rustfmt.toml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  TODO.md  rust-toolchain.toml
example/: Cargo.toml  build.rs
example/assets/shader/: triangle.wgsl  types.wgsl
example/assets/shader/utils/: testbed.wgsl
example/shaders/: constants.wgsl  fullscreen_effects.wgsl  global_bindings.wgsl  overlay.wgsl  simple_array_demo.wgsl  testbed.wgsl  triangle.wgsl  vec3_vertex_demo.wgsl
example/shaders/compute_demo/: particle_physics.wgsl  particle_renderer.wgsl
example/shaders/utils/: types.wgsl
example/src/: main.rs  overlay.rs  shader.rs  shader.wgsl  shader_bindings.rs  simple_text.rs  test.rs
example/src/demos/: fullscreen_effects_demo.rs  gradient_triangle_demo.rs  mod.rs  particle_compute_demo.rs  texture_array_demo.rs  triangle_demo.rs  vec3_vertex_demo.rs
example/src/more-shader-files/: reachme.wgsl
example/src/shader/: testbed.wgsl  triangle.wgsl  types.wgsl
example/tests/: test.rs
wgsl_bindgen/: CHANGELOG.md  Cargo.toml  rustfmt.toml
wgsl_bindgen/src/: bindgroup.rs  consts.rs  lib.rs  shader_module.rs  shader_registry.rs  structs.rs  test_helper.rs  types.rs  wgsl.rs  wgsl_bindgen.rs  wgsl_type.rs
wgsl_bindgen/src/bevy_util/: deptree.rs  mod.rs  module_path_resolver.rs  name_demangle.rs  parse_imports.rs  source_file.rs
wgsl_bindgen/src/bindgen/: bindgen.rs  errors.rs  mod.rs  options.rs  wgsl_bindgen_impl.rs
wgsl_bindgen/src/bindgen/options/: bindings.rs  mod.rs  types.rs
wgsl_bindgen/src/generate/: consts.rs  entry.rs  mod.rs  pipeline.rs  shader_module.rs  shader_registry.rs  vertex_input_collector.rs
wgsl_bindgen/src/generate/bind_group/: entries_struct_builder.rs  entry_collection_builder.rs  layout_builder.rs  mod.rs  raw_shader_bind_group.rs  single_bind_group.rs
wgsl_bindgen/src/generate/snapshots/: write_compute_module_empty.snap  write_compute_module_multiple_entries.snap  write_entry_constants.snap  write_fragment_states_multiple_entries.snap  write_fragment_states_single_entry.snap  write_global_constants.snap  write_pipeline_overrideable_constants.snap  write_pipeline_overrideable_constants_empty.snap  write_vertex_module_empty.snap  write_vertex_module_single_input_float32.snap  write_vertex_module_single_input_float64.snap  write_vertex_module_single_input_uint32.snap  write_vertex_shader_entry_multiple_buffers.snap  write_vertex_shader_entry_no_buffers.snap  write_vertex_shader_multiple_entries.snap
wgsl_bindgen/src/naga_util/: mod.rs  module_to_source.rs
wgsl_bindgen/src/quote_gen/: constants.rs  mod.rs  rust_item.rs  rust_mod_builder.rs  rust_module_builder.rs  rust_source_item.rs  rust_struct_builder.rs  rust_type_info.rs  token_utils.rs  utils.rs
wgsl_bindgen/src/snapshots/: struct_visibility.snap  wgsl_bindgen__structs__tests__struct_visibility.snap  wgsl_bindgen__structs__tests__write_all_structs_bytemuck_input_layout_validation.snap  wgsl_bindgen__structs__tests__write_all_structs_encase.snap  wgsl_bindgen__structs__tests__write_all_structs_glam.snap  wgsl_bindgen__structs__tests__write_all_structs_nalgebra.snap  wgsl_bindgen__structs__tests__write_all_structs_rust.snap  wgsl_bindgen__structs__tests__write_all_structs_serde_encase.snap  wgsl_bindgen__structs__tests__write_all_structs_skip_stage_outputs.snap  wgsl_bindgen__structs__tests__write_atomic_types.snap  wgsl_bindgen__structs__tests__write_nonpower_of_2_mats.snap  wgsl_bindgen__structs__tests__write_nonpower_of_2_mats_for_bytemuck_glam_option.snap  wgsl_bindgen__structs__tests__write_nonpower_of_2_mats_for_bytemuck_option.snap  wgsl_bindgen__structs__tests__write_runtime_sized_array.snap  wgsl_bindgen__structs__tests__write_runtime_sized_array_bytemuck.snap  wgsl_bindgen__structs__tests__write_shorter_constructor.snap  wgsl_bindgen__test__create_shader_module_embed_source.snap  write_all_structs_bytemuck_input_layout_validation.snap  write_all_structs_bytemuck_skip_input_layout_validation.snap  write_all_structs_encase.snap  write_all_structs_glam.snap  write_all_structs_nalgebra.snap  write_all_structs_rust.snap  write_all_structs_serde_encase.snap  write_all_structs_skip_stage_outputs.snap  write_atomic_types.snap  write_nonpower_of_2_mats.snap  write_nonpower_of_2_mats_for_bytemuck_glam_option.snap  write_nonpower_of_2_mats_for_bytemuck_option.snap  write_runtime_sized_array.snap  write_runtime_sized_array_bytemuck.snap  write_shorter_constructor.snap
wgsl_bindgen/tests/: bindgen_tests.rs  deptree_tests.rs  issues_tests.rs  lib.rs  out
wgsl_bindgen/tests/core/: mod.rs
wgsl_bindgen/tests/expected/: bindgen_bevy.out.rs  bindgen_main.out.rs
wgsl_bindgen/tests/features/: mod.rs  shader_defs.rs  shared_bind_groups.rs
wgsl_bindgen/tests/integration/: bevy.rs  mod.rs
wgsl_bindgen/tests/issues/: mod.rs
wgsl_bindgen/tests/output/: .gitignore  bindgen_bevy.expected.rs  bindgen_layouts.expected.rs  bindgen_main.expected.rs  bindgen_minimal.expected.rs  bindgen_padding.expected.rs  issue_35.expected.rs
wgsl_bindgen/tests/shaders/: layouts.wgsl  mixed_builtin_issue.wgsl
wgsl_bindgen/tests/shaders/basic/: main.wgsl  (+2 more)
wgsl_bindgen/tests/snapshots/: bevy_bindgen.snap  bindgen_tests__bevy_bindgen.snap  bindgen_tests__main_bindgen.snap  bindgen_tests__struct_alignment_minimal.snap  bindgen_tests__struct_alignment_padding.snap  bindgen_tests__struct_layouts.snap  builtin_vertex_bytemuck_issue.snap  builtin_vertex_encase_issue.snap  issue_35.snap  issues_tests__builtin_vertex_bytemuck_issue.snap  issues_tests__builtin_vertex_encase_issue.snap  issues_tests__issue_35.snap  issues_tests__mixed_builtin_encase_issue.snap  issues_tests__multiple_vertex_shaders_issue.snap  main_bindgen.snap  mixed_builtin_encase_issue.snap  module_path_binding_generation.snap  multiple_vertex_shaders_issue.snap  relative_path_bindgen.snap  struct_alignment_minimal.snap  struct_alignment_padding.snap  struct_layouts.snap  vec3a_padding_overflow_issue.snap
wgsl_bindgen/tests/test_shaders/: main.wgsl  other.wgsl
wgsl_bindgen/tests/utils/: mod.rs
(+73 files in other folders)
