[workspace]
# wgpu requires the newer resolver
resolver = "2"
members = ["wgsl_bindgen", "example"]

[workspace.package]
version = "0.15.2"
authors = ["swoorup", "ScanMountGoat(Original Fork)"]
edition = "2021"
repository = "https://github.com/Swoorup/wgsl_bindgen"
license = "MIT"
documentation = "https://docs.rs/wgsl_bindgen"

[workspace.dependencies]
blake3 = "1.5"
bytemuck = "1.13"
case = "1.0"
colored = "2.1"
data-encoding = "2.5"
derivative = "2.2"
derive_builder = "0.20"
derive_more = { version = "1.0", features = ["full"] }
encase = "0.9"
enumflags2 = "0.7"
futures = "0.3"
fxhash = "0.2"
glam = "0.28"
heck = "0.5"
include_absolute_path = "0.1"
indexmap = "2.2"
indoc = "2.0"
miette = "7.0"
naga = "23.0"
naga_oil = "0.16"
pathdiff = "0.2"
pretty_assertions = "1.2"
prettyplease = "0.2"
proc-macro2 = "1.0"
quote = "1.0"
regex = "1.10"
regex-syntax = "0.8"
smallvec = "1.13"
smol_str = "0.2"
strum = "0.26"
strum_macros = "0.26"
syn = "2.0"
thiserror = "1.0"
wgpu = "23.0"
wgpu-types = "23.0"
winit = "0.30"
