[workspace]
# wgpu requires the newer resolver
resolver = "2"
members = ["wgsl_bindgen", "example"]

[workspace.package]
version = "0.16.0"
authors = ["swoorup", "ScanMountGoat(Original Fork)"]
edition = "2021"
repository = "https://github.com/Swoorup/wgsl_bindgen"
license = "MIT"
documentation = "https://docs.rs/wgsl_bindgen"

[workspace.dependencies]
blake3 = "1.6"
bytemuck = "1.13"
case = "1.0"
colored = "3.0"
data-encoding = "2.5"
derivative = "2.2"
derive_builder = "0.20"
derive_more = { version = "2.0", features = ["full"] }
encase = "0.10"
enumflags2 = "0.7"
futures = "0.3"
fxhash = "0.2"
glam = "0.30"
heck = "0.5"
include_absolute_path = "0.1"
indexmap = "2.7"
indoc = "2.0"
miette = "7.5"
naga = "24.0"
naga_oil = "0.17"
pathdiff = "0.2"
pretty_assertions = "1.4"
prettyplease = "0.2"
proc-macro2 = "1.0"
quote = "1.0"
regex = "1.11"
regex-syntax = "0.8"
smallvec = "1.14"
smol_str = "0.3"
strum = "0.27"
strum_macros = "0.27"
syn = "2.0"
thiserror = "2.0"
wgpu = "24.0"
wgpu-types = "24.0"
winit = "0.30"
