[package]
name = "example"
authors.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
winit = "0.29"
wgpu = "0.19"
futures = "0.3"
bytemuck = { version = "1.13", features = ["derive"] }
encase = { version = "0.7", features = ["glam"] }
glam = { version = "0.27", features = ["bytemuck"] }
naga_oil = "0.13"
include_absolute_path = "0.1"

[build-dependencies]
wgsl_bindgen = { path = "../wgsl_bindgen" }
miette = { version = "7.0.0", features = ["fancy", "syntect"] }
