[package]
name = "example"
authors.workspace = true
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
winit.workspace = true
wgpu = { workspace = true, features = ["naga-ir"] }
futures.workspace = true
bytemuck = { workspace = true, features = ["derive"] }
encase = { workspace = true }
glam = { workspace = true, features = ["bytemuck"] }
naga_oil.workspace = true
include_absolute_path.workspace = true

[build-dependencies]
wgsl_bindgen = { path = "../wgsl_bindgen" }
miette = { workspace = true, features = ["fancy"] }
