[package]
name = "wgsl_bindgen"
version = "0.9.45"
authors = ["Swoorup", "ScanMountGoat(Original)"]
description = "Generate typesafe Rust bindings for wgsl shaders in wgpu"
license = "MIT"
documentation = "https://docs.rs/wgsl_bindgen"
repository = "https://github.com/Swoorup/wgsl_bindgen"
readme = "../README.md"
edition = "2021"

[dependencies]
naga = { version = "0.19.0", features = ["wgsl-in"] }
wgpu-types = "0.19.0"
syn = "2.0"
quote = "1.0"
proc-macro2 = "1.0"
prettyplease = "0.2"
thiserror = "1.0"
case = "1.0"
naga_oil = "0.13.0"
regex = "1.10.3"
data-encoding = "2.5.0"
indexmap = "2.2.3"
smallvec = "1.13.1"
derive_more = "0.99.17"
fxhash = "0.2.1"
derivative = "2.2.0"
smol_str = "0.2.1"
colored = "2.1.0"
derive_builder = "0.20.0"
miette = "7.0.0"
blake3 = "1.5.0"
regex-syntax = "0.8.2"
strum = "0.26.1"
strum_macros = "0.26.1"
pathdiff = "0.2.1"
enumflags2 = "0.7.9"
heck = "0.4.1"

[dev-dependencies]
indoc = "2.0"
pretty_assertions = "1.2.1"
miette = { version = "7.0.0", features = ["fancy", "syntect"] }
